--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
-    "DB_USERNAME" : "user",
-    "DB_PASSWORD" : "password",
-    "DB_PORT" : "3306",
+    "DB_USERNAME" : "postgres",
+    "DB_PASSWORD" : "postgres",
+    "DB_PORT" : "5432",
     "DB_HOST" : "localhost",
     "DB_NAME" : "echo_rest"
 }
