--- a/config/config.json
+++ b/config/config.json
@@ -3,5 +3,5 @@
     "DB_PASSWORD" : "postgres",
     "DB_PORT" : "5432",
     "DB_HOST" : "localhost",
-    "DB_NAME" : "echo_rest"
+    "DB_NAME" : "test_dev"
 }
